Domain object fix - decided for one logic with LocalDateTime because of tests